Created new welcome page.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kyra | Welcome</title>
+    <title>Kyra | About</title>
     <!--Awesome Favicon Links!! :)-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
@@ -54,33 +54,47 @@
         <div class="gridContainer">
 
             <div class="col-12">
-                <h1>Welcome</h1>
+                <h1>About</h1>
             </div>
 
             <hr>
 
             <!-- Columns stack on mobile -->
-            <div class="row">
-                <div class="col-12">
-                    <img class=profilePic src="assets/images/ResizedPicKSD.png" alt="Profile Pic">
-                </div>
-            </div>
+            
+                <div class="col-12 textBackground">
 
-            <div class="row">
-                <div class="col-12">
-
-                    <p class="welcome">
-                        Hi, I'm Kyra. Welcome to my portfolio! Take a look around and enjoy. Don't forget to send me feedback!
+                    <p class="p1">
+                        Hello, my name is Kyra Davis. I am a native to Nashville, and I am on the journey to
+                        becoming a web
+                        developer. I attended Vanderbilt University and graduated with a bachelor's in Psychology
+                        (Research Concentration). After graduating, I spent two years in Gunma, Japan teaching
+                        English to
+                        junior high
+                        school students.
                     </p>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <div class="enterButton">
-                        <a href="about.html" class="btn btn-success" id="enter">Enter</a>
-                    </div>
+                    <p class="p2">
+                        After returning to the United States, I joined a startup tech company. The company's
+                        main focus was perfecting their app and website for patients and caregivers so that they
+                        could easily
+                        manage several medications in one place. As a Care
+                        Advisor, I assisted patients with their experience with our products and services. By
+                        working closely
+                        with the developer team, my interest in web app development began to spark.
+                    </p>
 
+                    <p class="p3">
+                        I am currently learning coding and full stack web development in the Vanderbilt Coding
+                        Bootcamp. It is
+                        a
+                        challenge, but it is also very exciting. There is always so much more to learn and add to
+                        my coding
+                        toolbox!
+                    </p>
+
+                    <p>
+                        <a href="assets/images/Kyra_Davis_resume.pdf" target="blank" id="resume"><b>View resume here.</b></a>
+                    </p>
                 </div>
             </div>
 
