--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <div class="masthead">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container nav-container">
-                <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid"
+                <a class="navbar-brand" href="about.html"><img src="assets/images/Logo.png" class="img-fluid"
                         alt="logo"></a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                     <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarMenu">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
