--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                     <a href="https://github.com/kd101jp14" target="_blank" id="github">
                         <img src="assets/images/GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="Git Hub Link">
                     </a>
-                    <a href="https://www.linkedin.com/in/kyra-d-333743162/" target="_blank" id="linkedin">
+                    <a href="https://www.linkedin.com/in/kyra-d" target="_blank" id="linkedin">
                         <img src="assets/images/LinkedIn [in] for Screen/2-Color/In-2C-28px-TM.png" alt="LinkedIn Link">
                     </a>
                 </div>
