Added LIRI project to the 'portfolio' page and added gif to images directory.

--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,17 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class=" col-sm-6">
+                        <div class="card">
+                            <img src="assets/images/liri_gif.gif" class="card-img-top" alt="LIRI">
+                            <div class="card-body">
+                                <h5 class="card-title">LIRI</h5>
+                                <p class="card-text">Enter commands in this Node app for concert, song, and movie info!</p>
+                                <a href="https://github.com/kd101jp14/liri-node-app" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
