Updated portfolio with new projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,17 +178,40 @@
 
                     <div class=" col-sm-6">
                         <div class="card">
+                            <img src="assets/images/ff_screenshot.png" class="card-img-top" alt="Psychic Game">
+                            <div class="card-body">
+                                <h5 class="card-title">Friend Finder</h5>
+                                <p class="card-text">Take this survey and find a friend match!</p>
+                                <a href="https://immense-oasis-73958.herokuapp.com/" target="blank" class="btn btn-primary">Take the survey!</a>
+                                <a href="https://github.com/kd101jp14/friend_finder" target="blank" class="btn btn-primary">View repository</a>
+                            </div>
+                        </div>
+                    </div>
+
+                <div class="row">
+
+                    <div class=" col-sm-6">
+                        <div class="card">
                             <img src="assets/images/liri_gif.gif" class="card-img-top" alt="LIRI">
                             <div class="card-body">
                                 <h5 class="card-title">LIRI</h5>
-                                <p class="card-text">Enter commands in this Node app for concert, song, and movie info!</p>
+                                <p class="card-text">Get concert, song, and movie info!</p>
                                 <a href="https://github.com/kd101jp14/liri-node-app" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
                             </div>
                         </div>
                     </div>
+                
+
+                    <div class=" col-sm-6">
+                        <div class="card">
+                            <img src="assets/images/bamazonGif.gif" class="card-img-top" alt="Bamazon">
+                            <div class="card-body">
+                                <h5 class="card-title">Bamazon</h5>
+                                <p class="card-text">"Go shopping" on your command line!</p>
+                                <a href="https://github.com/kd101jp14/bamazon" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                            </div>
+                        </div>
                 </div>
-
-
             </div>
 
 
