Updated portfolio w/ burger app.

--- a/portfolio.html
+++ b/portfolio.html
@@ -192,11 +192,12 @@
 
                     <div class=" col-sm-6">
                         <div class="card">
-                            <img src="assets/images/liri_gif.gif" class="card-img-top" alt="LIRI">
+                            <img src="assets/images/burgerScreenshot.jpg" class="card-img-top" alt="Eat-Da-Burger">
                             <div class="card-body">
-                                <h5 class="card-title">LIRI</h5>
-                                <p class="card-text">Get concert, song, and movie info!</p>
-                                <a href="https://github.com/kd101jp14/liri-node-app" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                                <h5 class="card-title">Eat-Da-Burger</h5>
+                                <p class="card-text">Create and devour burgers with this database app!</p>
+                                <a href="https://evening-journey-13981.herokuapp.com/" target="blank" class="btn btn-primary">Try it out!</a>
+                                <a href="https://github.com/kd101jp14/burger" target="blank" class="btn btn-primary">View repository</a>
                             </div>
                         </div>
                     </div>
@@ -213,6 +214,21 @@
                         </div>
                 </div>
             </div>
+
+            <div class="row">
+
+                <div class=" col-sm-6">
+                    <div class="card">
+                        <img src="assets/images/liri_gif.gif" class="card-img-top" alt="LIRI">
+                        <div class="card-body">
+                            <h5 class="card-title">LIRI</h5>
+                            <p class="card-text">Get concert, song, and movie info!</p>
+                            <a href="https://github.com/kd101jp14/liri-node-app" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
