Added Project 2 (Wisdom Threads) to the portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -202,16 +202,17 @@
                         </div>
                     </div>
                 
-
                     <div class=" col-sm-6">
                         <div class="card">
-                            <img src="assets/images/bamazonGif.gif" class="card-img-top" alt="Bamazon">
+                            <img src="assets/images/project2Screenshot.png" class="card-img-top" alt="Wisdom Threads">
                             <div class="card-body">
-                                <h5 class="card-title">Bamazon</h5>
-                                <p class="card-text">"Go shopping" on your command line!</p>
-                                <a href="https://github.com/kd101jp14/bamazon" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                                <h5 class="card-title">Wisdom Threads</h5>
+                                <p class="card-text">Share, read, comment, and rate gems of wisdom!</p>
+                                <a href="https://storythread.herokuapp.com/" target="blank" class="btn btn-primary">Check it out!</a>
+                                <a href="https://github.com/kd101jp14/project2" target="blank" class="btn btn-primary">View repository</a>
                             </div>
                         </div>
+                    </div>
                 </div>
             </div>
 
@@ -224,6 +225,17 @@
                             <h5 class="card-title">LIRI</h5>
                             <p class="card-text">Get concert, song, and movie info!</p>
                             <a href="https://github.com/kd101jp14/liri-node-app" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" col-sm-6">
+                    <div class="card">
+                        <img src="assets/images/bamazonGif.gif" class="card-img-top" alt="Bamazon">
+                        <div class="card-body">
+                            <h5 class="card-title">Bamazon</h5>
+                            <p class="card-text">Go shopping" on your command line!</p>
+                            <a href="https://github.com/kd101jp14/bamazon" target="blank" class="btn btn-primary">View repository & clone to your machine!</a>
                         </div>
                     </div>
                 </div>
