--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
 
                 <div class=" col-sm-6">
                     <div class="card">
-                        <img src="assets/images/liri_gif.gif" class="card-img-top" alt="LIRI">
+                        <img src="assets/images/liri_gif.gif" class="card-img-top" id="liri" alt="LIRI">
                         <div class="card-body">
                             <h5 class="card-title">LIRI</h5>
                             <p class="card-text">Get concert, song, and movie info!</p>
