Replaced old resume with an updated one.

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                     </p>
 
                     <p>
-                        <a href="assets/images/Kyra_Davis_resume.pdf" target="blank" id="resume"><b>View resume here.</b></a>
+                        <a href="assets/images/kd-dev-resume.pdf target="blank" id="resume"><b>View resume here.</b></a>
                     </p>
                 </div>
             </div>
