Added 'Tiny Timelines' project to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,22 @@
 
             <div class="row">
 
+                <div class=" col-sm-12">
+                    <div class="card">
+                        <img src="assets/images/tiny-timelines-gif.gif" class="card-img-top" alt="Tiny Timelines">
+                        <div class="card-body">
+                            <h5 class="card-title">Tiny Timelines (Final Boot Camp Project)</h5>
+                            <p class="card-text">No time to create a baby book? Don't want to dump your child's info on social media? Well, this app is just for you.</p>
+                            <a href="https://quiet-bayou-69739.herokuapp.com/" target="blank" class="btn btn-success">Try it out!</a>
+                            <a href="https://github.com/kd101jp14/tiny-timelines" target="blank" class="btn btn-info">View repository</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+
                 <div class=" col-sm-6">
                     <div class="card">
                         <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
