--- a/about.html
+++ b/about.html
@@ -84,16 +84,12 @@
                     </p>
 
                     <p class="p3">
-                        I am currently learning coding and full stack web development in the Vanderbilt Coding
-                        Bootcamp. It is
-                        a
-                        challenge, but it is also very exciting. There is always so much more to learn and add to
-                        my coding
+                        I recently graduated from the coding Bootcamp at Vanderbilt University. We were the first cohort! It has been a challenge to learn full stack web development, but it has also been very exciting. There is always so much more to learn and add to my coding
                         toolbox!
                     </p>
 
                     <p>
-                        <a href="assets/images/kd-dev-resume.pdf target="blank" id="resume"><b>View resume here.</b></a>
+                        <a href="assets/images/kd-dev-resume.pdf" target="blank" id="resume"><b>View resume here.</b></a>
                     </p>
                 </div>
             </div>
