Added a still image for 'tiny-timelines' to the portfolio until a better gif is ready.

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
                 <div class=" col-sm-12">
                     <div class="card">
-                        <img src="assets/images/tiny-timelines-gif.gif" class="card-img-top" alt="Tiny Timelines">
+                        <img src="assets/images/tiny-timelines.png" class="card-img-top" alt="Tiny Timelines">
                         <div class="card-body">
                             <h5 class="card-title">Tiny Timelines (Final Boot Camp Project)</h5>
                             <p class="card-text">No time to create a baby book? Don't want to dump your child's info on social media? Well, this app is just for you.</p>
